# keep-up

./: .env.example  .gitignore  .lintstagedrc  Agents.md  CLAUDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  LICENSE  READEME.md  README.md  audit.json  biome.json  monitor_prs.sh  outdated.json  package.json  playwright.config.collab.ts  playwright.config.local.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pr11.diff  pr12.diff  tsconfig.base.json  turbo.json  vitest.aliases.ts  vitest.config.ts  vitest.workspace.ts
.agent/: agent-specs.md  design-standards.md  quality-gates.md
apps/desktop-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: deeplink.rs  lib.rs  menu.rs  window_state.rs
apps/desktop-tauri/src-tauri/src/enclave/: audit.rs  commands.rs  mod.rs  state.rs  types.rs
apps/desktop-tauri/src-tauri/src/logs/: mod.rs
apps/desktop-tauri/src-tauri/src/node/: adapter.rs  commands.rs  mod.rs  types.rs
apps/desktop-tauri/src-tauri/src/terminal/: mod.rs
apps/desktop-tauri/src-tauri/src/vectorstore/: commands.rs  mod.rs  store.rs  types.rs
apps/desktop-tauri/src-tauri/src/watcher/: mod.rs
artifacts/: perf-metrics.json
docs/: PRD.md  README.md  testing.md
e2e/: a11y-smoke.spec.ts  ai-gateway-enforcement.spec.ts  ai-gateway.spec.ts  annotation-edge-cases.spec.ts  annotation-handle.spec.ts  annotation-hover-stability.spec.ts  annotation-reorder.spec.ts  annotations.spec.ts  block-drag-reorder.spec.ts  block-interactions.spec.ts  block-menu.spec.ts  bold-anti-jank.spec.ts  collab-app-integration.spec.ts  collab-recovery.spec.ts  collab-wasm-repro.spec.ts  (+51 more)
(+1242 files in other folders)
