[package]
name = "desktop-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace]
resolver = "2"
members = [
  ".",
  "../../../packages/ai-context-hash-rs",
  "../../../packages/ai-sanitizer-rs/native",
  "../../../packages/anchor-codec-rs",
  "../../../packages/anchor-relocation-rs",
  "../../../packages/canonicalizer-rs",
  "../../../packages/diff-rs",
  "../../../packages/gitignore-rs",
  "../../../packages/json-accel-rs/native",
  "../../../packages/policy-hash-rs",
  "../../../packages/sandbox-rs",
  "../../../packages/storage-engine-rs",
  "../../../packages/streaming-markdown-rs",
  "../../../packages/symbol-index-rs",
  "../../../packages/text-normalization-rs",
  "../../../packages/tokenizer-rs/native",
  "../../../packages/vector-similarity-rs",
]
